{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 12,
  "lineage": "892d5904-3d63-bd64-3126-d90d09a37898",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http1-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5f7d2bad733efff",
            "arn": "arn:aws:ec2:us-west-2:590184037514:elastic-ip/eipalloc-0e5f7d2bad733efff",
            "association_id": "eipassoc-052b6b9b6d1bf80b6",
            "domain": "vpc",
            "id": "eipalloc-0e5f7d2bad733efff",
            "instance": "i-0607b209080226dff",
            "network_border_group": "us-west-2",
            "network_interface": "eni-07e34992251bc1c8f",
            "private_dns": "ip-10-10-10-9.us-west-2.compute.internal",
            "private_ip": "10.10.10.9",
            "public_dns": "ec2-44-241-113-184.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.113.184",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "public-http1-instance-http1-1"
            },
            "tags_all": {
              "Name": "public-http1-instance-http1-1"
            }
          },
          "dependencies": [
            "aws_instance.http1",
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http4-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4e5a35462fb6d83",
            "arn": "arn:aws:ec2:us-west-2:590184037514:elastic-ip/eipalloc-0a4e5a35462fb6d83",
            "association_id": "eipassoc-0479fe8c03bd75474",
            "domain": "vpc",
            "id": "eipalloc-0a4e5a35462fb6d83",
            "instance": "i-02fa0c4bb5b45e54f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b243d722b196d2c9",
            "private_dns": "ip-10-10-10-10.us-west-2.compute.internal",
            "private_ip": "10.10.10.10",
            "public_dns": "ec2-35-166-115-41.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.115.41",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "public-http4-instance-http4-1"
            },
            "tags_all": {
              "Name": "public-http4-instance-http4-1"
            }
          },
          "dependencies": [
            "aws_instance.http4",
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http1-1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f991c49d264708f",
            "arn": "arn:aws:ec2:us-west-2:590184037514:instance/i-0607b209080226dff",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0607b209080226dff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Infoimage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e34992251bc1c8f",
            "private_dns": "ip-10-10-10-9.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.9",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a69990f98c88d3a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c305f7a4236040b",
            "tags": {
              "Environment": "development",
              "Name": "instance-http1-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "instance-http1-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084a2a428939ff3cc",
              "sg-0f27ea957445470ce"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http4-1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f991c49d264708f",
            "arn": "arn:aws:ec2:us-west-2:590184037514:instance/i-02fa0c4bb5b45e54f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fa0c4bb5b45e54f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Infoimage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b243d722b196d2c9",
            "private_dns": "ip-10-10-10-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.10",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08863d9497cec609d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c305f7a4236040b",
            "tags": {
              "Environment": "development",
              "Name": "instance-http4-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "instance-http4-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084a2a428939ff3cc",
              "sg-0f27ea957445470ce"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:internet-gateway/igw-0320e002cde02e3fa",
            "id": "igw-0320e002cde02e3fa",
            "owner_id": "590184037514",
            "region": "us-west-2",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0d4495943e3f4489e"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:route-table/rtb-0b3b8c5ffeda3842a",
            "id": "rtb-0b3b8c5ffeda3842a",
            "owner_id": "590184037514",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0320e002cde02e3fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4495943e3f4489e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ffaf5e600568a99",
            "region": "us-west-2",
            "route_table_id": "rtb-0b3b8c5ffeda3842a",
            "subnet_id": "subnet-07c305f7a4236040b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:security-group/sg-0f27ea957445470ce",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27ea957445470ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": "",
            "owner_id": "590184037514",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "tags_all": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4495943e3f4489e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:security-group/sg-084a2a428939ff3cc",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084a2a428939ff3cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "590184037514",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4495943e3f4489e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:subnet/subnet-07c305f7a4236040b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c305f7a4236040b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184037514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "subnet-http1"
            },
            "tags_all": {
              "Name": "subnet-http1"
            },
            "vpc_id": "vpc-0d4495943e3f4489e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590184037514:vpc/vpc-0d4495943e3f4489e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00761196eafb183c8",
            "default_route_table_id": "rtb-0f1ed42a3a10921fa",
            "default_security_group_id": "sg-0076d6ed661335743",
            "dhcp_options_id": "dopt-00ffa58cec02990b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4495943e3f4489e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1ed42a3a10921fa",
            "owner_id": "590184037514",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}